components/wmo2rcyso-dotnet-basic/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: wmo2rcyso-dotnet-basic
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: wmo2rcyso-dotnet-basic 
  name: wmo2rcyso-dotnet-basic
spec:
  port:
    targetPort: 8081 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: wmo2rcyso-dotnet-basic
    weight: 100
